Optional unsafe array access and endian-specific accessors